fix: clean up tests AM-3258